--- a/abbreviations.tex
+++ b/abbreviations.tex
@@ -74,6 +74,7 @@
 \newcommand{\DPMJet}{{\scshape DPMJet}\xspace}
 \newcommand{\Epos}{{\scshape Epos}\xspace}
 \newcommand{\EposLong}{{\scshape Epos\,1.99}\xspace}
+\newcommand{\QGSJetOld}{{\scshape QGSJet\,01}\xspace}
 \newcommand{\QGSJetLong}{{\scshape QGSJet\,II-04}\xspace}
 \newcommand{\QGSJetOldLong}{{\scshape QGSJet\,II-03}\xspace}
 \newcommand{\DPMJetLong}{{\scshape DPMJet\,3.06}\xspace}
