--- a/lib.bib
+++ b/lib.bib
@@ -2,6 +2,23 @@
 %%%%%%%% PAPERS %%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%
 
+@article{AbuZayyad:2012qk,
+      author         = "Abu-Zayyad, T. and others",
+      title          = "{The Energy Spectrum of Telescope Array's Middle Drum
+                        Detector and the Direct Comparison to the High Resolution
+                        Fly's Eye Experiment}",
+      collaboration  = "Telescope Array",
+      journal        = "Astropart. Phys.",
+      volume         = "39-40",
+      year           = "2012",
+      pages          = "109-119",
+      doi            = "10.1016/j.astropartphys.2012.05.012",
+      eprint         = "1202.5141",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.IM",
+      SLACcitation   = "%%CITATION = ARXIV:1202.5141;%%"
+}
+
 @article{Aloisio:2017ooo,
       author         = "Aloisio, Roberto and Blasi, Pasquale and De Mitri, Ivan
                         and Petrera, Sergio",
