--- a/main.tex
+++ b/main.tex
@@ -70,6 +70,7 @@
 
 %%%%%%%%%%%%% RAUL %%%%%%%%%%%%%
 \usepackage{subfig}
+\usepackage{tikz}
 \usepackage{mathtools}
 \usepackage{notoccite}
 \usepackage{overpic}
